bug in column labels
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/main/templates/matrix/package.html
+++ b/spackmon/apps/main/templates/matrix/package.html
@@ -215,7 +215,7 @@ function generate_plot(dimension) {
 
     column.append("text")
         .attr("x", 6)
-        .attr("y", y.rangeBand() / 2)
+        .attr("y", x.rangeBand() / 2)
         .attr("dy", ".32em")
         .style("font-size", "10px")
         .attr("text-anchor", "start")
