adding api support to run splice analyses, and adding simple example
we will likely need to fully download analysis results, and for this I need to write a new example

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/base/templates/base/footer.html
+++ b/spackmon/apps/base/templates/base/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-  <div id="footerlinks" class="clearfix">
+  <div id="footerlinks" class="clearfix" style="padding-top:100px">
     <span id="footertext" style="padding-right:30px">
       Spack Monitor {{ SPACK_MONITOR_VERSION }}
       with ❤️ from <a href="https://github.com/spack">Spack Contributors</a> |
