--- a/spackmon/apps/base/templates/base/navigation.html
+++ b/spackmon/apps/base/templates/base/navigation.html
@@ -26,8 +26,8 @@
           <a class="dropdown-item" href="{% url 'main:package-analysis-diffs' %}">Analysis Diffs</a>
           <a class="dropdown-item" href="{% url 'main:stability-test-package' %}">Stability Test</a>
           <a class="dropdown-item" href="{% url 'main:symbols-test-package' %}">Symbol Splicing</a>
-          <!--<div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>-->
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'api:internal_apis:docs' %}">API</a>
         </div>
       </li>
 {% if request.user.is_authenticated %}<li class="nav-item dropdown">
