start of refactor to enable online ml
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/main/templates/matrix/package.html
+++ b/spackmon/apps/main/templates/matrix/package.html
@@ -62,7 +62,7 @@
    <div class="col-md-3">
      <label>Select the architecture</label>
      <select autocomplete="nope" class="autocomplete" style="width:100%" id="arch-select" class="form-select" aria-label="arch">
-      <option value="all">all</option>{% for a in arches %}<option value="{{ a }}" {% if a and a == arch %}selected{% endif %}>{{ a }}</option>{% endfor %}
+      {% for a in arches %}<option value="{{ a }}" {% if a and a == arch %}selected{% endif %}>{{ a }}</option>{% endfor %}
       </select>
     </div>
    <div class="col-md-3" id="specs-table">
